<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:id="@+id/category_group">
        <item
            android:id="@+id/nav_category"
            android:icon="@drawable/ic_baseline_restaurant_menu_24"
            android:title="@string/menu_category" />
    </group>
    <group android:id="@+id/order_group" >
        <item
            android:id="@+id/nav_list_orders"
            android:icon="@drawable/ic_baseline_list_24"
            android:title="@string/menu_orders" />
    </group>

    <group android:id="@+id/shippers_group" >
        <item
            android:id="@+id/nav_list_shippers"
            android:icon="@drawable/ic_baseline_local_shipping_24"
            android:title="@string/menu_shippers" />
    </group>


    <group android:id="@+id/signout_group">
        <item
            android:id="@+id/nav_signout"
            android:icon="@drawable/ic_baseline_exit_to_app_24"
            android:title="@string/menu_signout" />
    </group>


</menu>